--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,89 +13,82 @@
     <img class="header__logo" src="./images/mesto-logo.svg" alt="Логотип сайта">
   </header>
 
-  <section>
-    <div class="profile">
-      <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
-      <div class="profile__info">
-        <div class="profile__author-panel">
-          <h1 class="profile__text-field profile__text-field_type_author">Жак-Ив Кусто</h1>
-          <button type="button" class="profile__edit-button"></button>
-        </div>
-        <p class="profile__text-field profile__text-field_type_description">Исследователь океана</p>
+  <section class="profile">
+    <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
+    <div class="profile__info">
+      <div class="profile__author-panel">
+        <h1 class="profile__text-field profile__text-field_type_author">Жак-Ив Кусто</h1>
+        <button type="button" class="profile__edit-button"></button>
       </div>
-      <button type="button" class="profile__add-button"></button>
+      <p class="profile__text-field profile__text-field_type_description">Исследователь океана</p>
     </div>
+    <button type="button" class="profile__add-button"></button>
   </section>
-  
+
   <ul class="elements">
     <li class="elements__item">
-      <img class="elements__image" src="./images/photo-karachaevsk.jpg" alt="Фотография Карачаевска">
+      <img class="elements__image" src="./images/photo-karachaevsk.jpg" alt="Карачаевск">
       <div class="elements__description">
-        <p class="elements__title">Карачаевск</p>
-        <div class="elements__like"></div>
-        <div class="elements__like elements__like_actived elements__like_hidden"></div>
+        <h2 class="elements__title">Карачаевск</h2>
+        <button type="button" class="elements__like"></button>
       </div>
     </li>
 
     <li class="elements__item">
       <img class="elements__image" src="./images/photo-elbrus.jpg" alt="Эльбрус">
       <div class="elements__description">
-        <p class="elements__title">Гора Эльбрус</p>
-        <div class="elements__like"></div>
-        <div class="elements__like elements__like_actived elements__like_hidden"></div>
+        <h2 class="elements__title">Гора Эльбрус</h2>
+        <button type="button" class="elements__like"></button>
       </div>
     </li>
 
     <li class="elements__item">
       <img class="elements__image" src="./images/photo-dombay.jpg" alt="Домбай">
       <div class="elements__description">
-        <p class="elements__title">Домбай</p>
-        <div class="elements__like"></div>
-        <div class="elements__like elements__like_actived elements__like_hidden"></div>
+        <h2 class="elements__title">Домбай</h2>
+        <button type="button" class="elements__like"></button>
       </div>
     </li>
 
     <li class="elements__item">
       <img class="elements__image" src="./images/photo-elbrus.jpg" alt="Эльбрус">
       <div class="elements__description">
-        <p class="elements__title">Гора Эльбрус</p>
-        <div class="elements__like"></div>
-        <div class="elements__like elements__like_actived elements__like_hidden"></div>
+        <h2 class="elements__title">Гора Эльбрус</h2>
+        <button type="button" class="elements__like"></button>
       </div>
     </li>
 
     <li class="elements__item">
       <img class="elements__image" src="./images/photo-dombay.jpg" alt="Домбай">
       <div class="elements__description">
-        <p class="elements__title">Домбай</p>
-        <div class="elements__like"></div>
-        <div class="elements__like elements__like_actived elements__like_hidden"></div>
+        <h2 class="elements__title">Домбай</h2>
+        <button type="button" class="elements__like"></button>
       </div>
     </li>
 
     <li class="elements__item">
-      <img class="elements__image" src="./images/photo-karachaevsk.jpg" alt="Фотография Карачаево-Черкессии">
+      <img class="elements__image" src="./images/photo-karachaevsk.jpg" alt="Карачаево-Черкессия">
       <div class="elements__description">
-        <p class="elements__title">Карачаево-Черкессия</p>
-        <div class="elements__like"></div>
-        <div class="elements__like elements__like_actived elements__like_hidden"></div>
+        <h2 class="elements__title">Карачаево-Черкессия</h2>
+        <button type="button" class="elements__like"></button>
       </div>
     </li>
   </ul>
 
   <footer class="footer">
-    <p class="footer__author">&copy; Mesto Russia</p>
+    <p class="footer__author">&copy; 2022. Татьяна Батьянова</p>
   </footer>
 
   <div class="popup">
-    <form class="popup__container">
-      <button class="popup__close"></button>
+    <form name="edit-form" class="popup__container">
+      <button type="button" class="popup__close"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input class="popup__text-input popup__text-input_author" type="text">
-      <input class="popup__text-input popup__text-input_description" type="text">
+      <input class="popup__text-input popup__text-input_type_author" type="text">
+      <input class="popup__text-input popup__text-input_type_description" type="text">
       <button type="submit" class="popup__submit-button">Сохранить</button>
     </form>
   </div>
-<script src="./scripts/index.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
+
 </html>
